app/assets/stylesheets/home.scss
@import 'global_vars';

$default_font_color: #1882a8;

html {
  background-color: transparent;
  // background-image: image-url('/assets/bg.png');
}

/*
body {
  font-family: "Helvetica Neue",Helvetica,Tahoma,Arial,STXihei,"Microsoft YaHei","微软雅黑",sans-serif;
  font-size: 1em;
  line-height: 1.5em;
  color: #333;
}
*/

.middle {
  float: none;
  margin: 0 auto;
}

#nav {
  height: 50px;
  border-bottom: 1px solid rgba(0,0,0,0.15);
  width: 100%;
  .nav-inner {
    background: #FFFFFF;
  }
  .container {
    position: relative;
    width: 1080px;
    margin: 0 auto;
    text-align: center;
    .right {
      float: right;
      span.text {
        padding: 15px 0 15px 15px;
      }
    }
  }
  .nav-logo {
    line-height: 50px;
    font-size: 2em;
    margin-bottom: -45px;
    a {
      width: 120px;
      margin: 0 auto;
      text-decoration: none;
      color: $default_font_color;
    }
  }
}

.header-section {
  background: #fff;
  .container {
    a.logo {
      text-decoration: none;
      color: $default_font_color;
      font-size: 2em;
      h1 {
        width: 100px;
        margin: 0 auto;
        line-height: 60px;
      }
    }
    a.sign-in-btn {
      position: absolute;
      right: 0;
      top: 20%;
    }
  }
}

.neck {
  height: 380px;
  background-image: image-url('texture.png');
  background-size: 450px 450px;
  background-color: #262626;

  @media #{$tablet} {
    height: 450px;
  }

  @media #{$mobile} {
    height: 440px;
  }

  .slogan {
    color: #FFFFFF;
    text-align: center;
    padding-top: 50px;

    @media #{$tablet} {
      padding-top: 30px;
    }

    @media #{$mobile} {
      padding-top: 30px;
    }

    h1 {
      font-size: 5rem;
      font-weight: 100;

      @media #{$mobile} {
        font-size: 4rem;
      }
    }
    h6 {
      font-family: "Avenir Next","Avenir","brandon-grotesque","Helvetica Neue","Helvetica","Segoe UI","Calibri","Franklin Gothic Book","Verdana",sans-serif;
      color: #a4acb1;
      margin:0 auto;
      max-width: 80%;
      font-size: 2.5rem;
      font-weight: 100;
      line-height: 1.3;

      @media #{$tablet} {
        margin-top: 30px;
      }

      @media #{$mobile} {
        margin-top: 30px; 
      }
    }
  }
  .sign-up {
    .action {
      margin: 55px auto;

      .get-started {
        width: 400px;

        @media #{$mobile} {
          width: 290px;
        }
      }
    }
  }
}
.footer {
  background: #fff;
  color: $default_font_color;
  text-shadow: none;
  .container {
    padding: 30px 0;
    text-align: center;
    .empower-reports {
      h2 {
        color: #FFFFFF;
        margin-bottom: 40px;
        font-size: 3.5rem;
        font-weight: 100;
        line-height: 1;
      }
      h5 {
        margin-top: 10px;
        color: #c2e2f2;
        font-size: 2rem;
        font-weight: normal;
        line-height: 1;
      }
      h3 {
        margin-top: 10px;
        font-size: 3rem;
        font-weight: 400;
        line-height: 1;
        padding-right: .55em;
      }
    }
  }
}

.main-container {
  width: 1080px;
  margin:20px auto;
  .user-action {
    width: 50%;
    margin: 0 auto !important;
  }
}

